--- a/notebooks/inspect_model.ipynb
+++ b/notebooks/inspect_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "c8edab19-78b1-4408-85b8-cc3f459a4e8f",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "e637f1eb-d78e-4227-87bb-1039f2bdcc12",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "7fb82d39-5248-44a1-92bd-fb610b289cf9",
    "metadata": {},
    "outputs": [],
@@ -35,21 +35,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "cbcd4965-617c-416e-a40a-ad5fb263472a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<All keys matched successfully>"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = models.resnet34()\n",
     "num_ftrs = model.fc.in_features\n",
@@ -59,186 +48,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "da5ff6be-b963-488c-b707-ff826a38f95f",
+   "execution_count": null,
+   "id": "7e6d3bd6-9251-46e0-a500-29f8f84676d7",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Linear(in_features=512, out_features=10, bias=True)"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "model.fc"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "id": "57837f95-15f8-4e9d-a99c-cafc2d9a5106",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "----------------------------------------------------------------\n",
-      "        Layer (type)               Output Shape         Param #\n",
-      "================================================================\n",
-      "            Conv2d-1         [-1, 64, 112, 112]           9,408\n",
-      "       BatchNorm2d-2         [-1, 64, 112, 112]             128\n",
-      "              ReLU-3         [-1, 64, 112, 112]               0\n",
-      "         MaxPool2d-4           [-1, 64, 56, 56]               0\n",
-      "            Conv2d-5           [-1, 64, 56, 56]          36,864\n",
-      "       BatchNorm2d-6           [-1, 64, 56, 56]             128\n",
-      "              ReLU-7           [-1, 64, 56, 56]               0\n",
-      "            Conv2d-8           [-1, 64, 56, 56]          36,864\n",
-      "       BatchNorm2d-9           [-1, 64, 56, 56]             128\n",
-      "             ReLU-10           [-1, 64, 56, 56]               0\n",
-      "       BasicBlock-11           [-1, 64, 56, 56]               0\n",
-      "           Conv2d-12           [-1, 64, 56, 56]          36,864\n",
-      "      BatchNorm2d-13           [-1, 64, 56, 56]             128\n",
-      "             ReLU-14           [-1, 64, 56, 56]               0\n",
-      "           Conv2d-15           [-1, 64, 56, 56]          36,864\n",
-      "      BatchNorm2d-16           [-1, 64, 56, 56]             128\n",
-      "             ReLU-17           [-1, 64, 56, 56]               0\n",
-      "       BasicBlock-18           [-1, 64, 56, 56]               0\n",
-      "           Conv2d-19           [-1, 64, 56, 56]          36,864\n",
-      "      BatchNorm2d-20           [-1, 64, 56, 56]             128\n",
-      "             ReLU-21           [-1, 64, 56, 56]               0\n",
-      "           Conv2d-22           [-1, 64, 56, 56]          36,864\n",
-      "      BatchNorm2d-23           [-1, 64, 56, 56]             128\n",
-      "             ReLU-24           [-1, 64, 56, 56]               0\n",
-      "       BasicBlock-25           [-1, 64, 56, 56]               0\n",
-      "           Conv2d-26          [-1, 128, 28, 28]          73,728\n",
-      "      BatchNorm2d-27          [-1, 128, 28, 28]             256\n",
-      "             ReLU-28          [-1, 128, 28, 28]               0\n",
-      "           Conv2d-29          [-1, 128, 28, 28]         147,456\n",
-      "      BatchNorm2d-30          [-1, 128, 28, 28]             256\n",
-      "           Conv2d-31          [-1, 128, 28, 28]           8,192\n",
-      "      BatchNorm2d-32          [-1, 128, 28, 28]             256\n",
-      "             ReLU-33          [-1, 128, 28, 28]               0\n",
-      "       BasicBlock-34          [-1, 128, 28, 28]               0\n",
-      "           Conv2d-35          [-1, 128, 28, 28]         147,456\n",
-      "      BatchNorm2d-36          [-1, 128, 28, 28]             256\n",
-      "             ReLU-37          [-1, 128, 28, 28]               0\n",
-      "           Conv2d-38          [-1, 128, 28, 28]         147,456\n",
-      "      BatchNorm2d-39          [-1, 128, 28, 28]             256\n",
-      "             ReLU-40          [-1, 128, 28, 28]               0\n",
-      "       BasicBlock-41          [-1, 128, 28, 28]               0\n",
-      "           Conv2d-42          [-1, 128, 28, 28]         147,456\n",
-      "      BatchNorm2d-43          [-1, 128, 28, 28]             256\n",
-      "             ReLU-44          [-1, 128, 28, 28]               0\n",
-      "           Conv2d-45          [-1, 128, 28, 28]         147,456\n",
-      "      BatchNorm2d-46          [-1, 128, 28, 28]             256\n",
-      "             ReLU-47          [-1, 128, 28, 28]               0\n",
-      "       BasicBlock-48          [-1, 128, 28, 28]               0\n",
-      "           Conv2d-49          [-1, 128, 28, 28]         147,456\n",
-      "      BatchNorm2d-50          [-1, 128, 28, 28]             256\n",
-      "             ReLU-51          [-1, 128, 28, 28]               0\n",
-      "           Conv2d-52          [-1, 128, 28, 28]         147,456\n",
-      "      BatchNorm2d-53          [-1, 128, 28, 28]             256\n",
-      "             ReLU-54          [-1, 128, 28, 28]               0\n",
-      "       BasicBlock-55          [-1, 128, 28, 28]               0\n",
-      "           Conv2d-56          [-1, 256, 14, 14]         294,912\n",
-      "      BatchNorm2d-57          [-1, 256, 14, 14]             512\n",
-      "             ReLU-58          [-1, 256, 14, 14]               0\n",
-      "           Conv2d-59          [-1, 256, 14, 14]         589,824\n",
-      "      BatchNorm2d-60          [-1, 256, 14, 14]             512\n",
-      "           Conv2d-61          [-1, 256, 14, 14]          32,768\n",
-      "      BatchNorm2d-62          [-1, 256, 14, 14]             512\n",
-      "             ReLU-63          [-1, 256, 14, 14]               0\n",
-      "       BasicBlock-64          [-1, 256, 14, 14]               0\n",
-      "           Conv2d-65          [-1, 256, 14, 14]         589,824\n",
-      "      BatchNorm2d-66          [-1, 256, 14, 14]             512\n",
-      "             ReLU-67          [-1, 256, 14, 14]               0\n",
-      "           Conv2d-68          [-1, 256, 14, 14]         589,824\n",
-      "      BatchNorm2d-69          [-1, 256, 14, 14]             512\n",
-      "             ReLU-70          [-1, 256, 14, 14]               0\n",
-      "       BasicBlock-71          [-1, 256, 14, 14]               0\n",
-      "           Conv2d-72          [-1, 256, 14, 14]         589,824\n",
-      "      BatchNorm2d-73          [-1, 256, 14, 14]             512\n",
-      "             ReLU-74          [-1, 256, 14, 14]               0\n",
-      "           Conv2d-75          [-1, 256, 14, 14]         589,824\n",
-      "      BatchNorm2d-76          [-1, 256, 14, 14]             512\n",
-      "             ReLU-77          [-1, 256, 14, 14]               0\n",
-      "       BasicBlock-78          [-1, 256, 14, 14]               0\n",
-      "           Conv2d-79          [-1, 256, 14, 14]         589,824\n",
-      "      BatchNorm2d-80          [-1, 256, 14, 14]             512\n",
-      "             ReLU-81          [-1, 256, 14, 14]               0\n",
-      "           Conv2d-82          [-1, 256, 14, 14]         589,824\n",
-      "      BatchNorm2d-83          [-1, 256, 14, 14]             512\n",
-      "             ReLU-84          [-1, 256, 14, 14]               0\n",
-      "       BasicBlock-85          [-1, 256, 14, 14]               0\n",
-      "           Conv2d-86          [-1, 256, 14, 14]         589,824\n",
-      "      BatchNorm2d-87          [-1, 256, 14, 14]             512\n",
-      "             ReLU-88          [-1, 256, 14, 14]               0\n",
-      "           Conv2d-89          [-1, 256, 14, 14]         589,824\n",
-      "      BatchNorm2d-90          [-1, 256, 14, 14]             512\n",
-      "             ReLU-91          [-1, 256, 14, 14]               0\n",
-      "       BasicBlock-92          [-1, 256, 14, 14]               0\n",
-      "           Conv2d-93          [-1, 256, 14, 14]         589,824\n",
-      "      BatchNorm2d-94          [-1, 256, 14, 14]             512\n",
-      "             ReLU-95          [-1, 256, 14, 14]               0\n",
-      "           Conv2d-96          [-1, 256, 14, 14]         589,824\n",
-      "      BatchNorm2d-97          [-1, 256, 14, 14]             512\n",
-      "             ReLU-98          [-1, 256, 14, 14]               0\n",
-      "       BasicBlock-99          [-1, 256, 14, 14]               0\n",
-      "          Conv2d-100            [-1, 512, 7, 7]       1,179,648\n",
-      "     BatchNorm2d-101            [-1, 512, 7, 7]           1,024\n",
-      "            ReLU-102            [-1, 512, 7, 7]               0\n",
-      "          Conv2d-103            [-1, 512, 7, 7]       2,359,296\n",
-      "     BatchNorm2d-104            [-1, 512, 7, 7]           1,024\n",
-      "          Conv2d-105            [-1, 512, 7, 7]         131,072\n",
-      "     BatchNorm2d-106            [-1, 512, 7, 7]           1,024\n",
-      "            ReLU-107            [-1, 512, 7, 7]               0\n",
-      "      BasicBlock-108            [-1, 512, 7, 7]               0\n",
-      "          Conv2d-109            [-1, 512, 7, 7]       2,359,296\n",
-      "     BatchNorm2d-110            [-1, 512, 7, 7]           1,024\n",
-      "            ReLU-111            [-1, 512, 7, 7]               0\n",
-      "          Conv2d-112            [-1, 512, 7, 7]       2,359,296\n",
-      "     BatchNorm2d-113            [-1, 512, 7, 7]           1,024\n",
-      "            ReLU-114            [-1, 512, 7, 7]               0\n",
-      "      BasicBlock-115            [-1, 512, 7, 7]               0\n",
-      "          Conv2d-116            [-1, 512, 7, 7]       2,359,296\n",
-      "     BatchNorm2d-117            [-1, 512, 7, 7]           1,024\n",
-      "            ReLU-118            [-1, 512, 7, 7]               0\n",
-      "          Conv2d-119            [-1, 512, 7, 7]       2,359,296\n",
-      "     BatchNorm2d-120            [-1, 512, 7, 7]           1,024\n",
-      "            ReLU-121            [-1, 512, 7, 7]               0\n",
-      "      BasicBlock-122            [-1, 512, 7, 7]               0\n",
-      "AdaptiveAvgPool2d-123            [-1, 512, 1, 1]               0\n",
-      "          Linear-124                   [-1, 10]           5,130\n",
-      "================================================================\n",
-      "Total params: 21,289,802\n",
-      "Trainable params: 21,289,802\n",
-      "Non-trainable params: 0\n",
-      "----------------------------------------------------------------\n",
-      "Input size (MB): 0.57\n",
-      "Forward/backward pass size (MB): 96.28\n",
-      "Params size (MB): 81.21\n",
-      "Estimated Total Size (MB): 178.07\n",
-      "----------------------------------------------------------------\n"
-     ]
-    }
-   ],
-   "source": [
-    "summary(model, (3, 224, 224))"
+    "# l = [module for module in model.modules() if not isinstance(module, nn.Conv2d)]\n",
+    "# len(l)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "784ebc1a-6998-4223-b916-09381d67c410",
+   "id": "57837f95-15f8-4e9d-a99c-cafc2d9a5106",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "summary(model, (3, 224, 224))"
+   ]
   }
  ],
  "metadata": {
